# ibkr-options

./: .gitignore  README.md  pyproject.toml
docs/superpowers/specs/: 2026-06-12-ibkr-options-skill-design.md
skill/: SKILL.md
src/ibkr_options/: cli.py  config.py  conn.py  market.py  orders.py  tokens.py  verticals.py
tests/: test_account.py  test_cancel.py  test_cli_guards.py  test_close.py  test_order_status.py  test_orders_preview.py  test_resolve.py  test_stock.py  test_tokens.py  test_verticals.py
tests/integration/: conftest.py  test_cli_integration.py  test_close_integration.py  test_market_data_integration.py  test_orders_integration.py  test_safety_integration.py  test_stock_integration.py  test_vertical_integration.py
