[project]
name = "ibkr-options"
version = "0.1.0"
description = "Options & stock trading CLI for Interactive Brokers via ib_async, with preview/confirm/execute safeguards"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["interactive-brokers", "ibkr", "options", "trading", "ib_async", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "ib-async>=2.1.0",
]

[project.scripts]
ibkr = "ibkr_options.cli:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
markers = [
    "integration: requires a running IB Gateway (paper) on port 4002; skips if unreachable",
]
